--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
                 </div>
                 <!--          <div class="app-loading-title"><%= VITE_GLOB_APP_TITLE %></div>-->
-                <div class="app-loading-title">企业数智化</div>
+                <div class="app-loading-title">智能积分管理系统</div>
             </div>
         </div>
     </div>
